# programming

./: README.md  file1.txt  laba 10.c  laba 4.md  laba 5.md  laba 6.c  laba 6.md  laba 7.c  laba 7.md  laba 8.md  laba6.md  laba9.md  report.md  sort.c
lab12/: cripto.c  cripto.h  criptomain.c
lab13/: CMakeLists.txt  Makefile
lab5/: laba 5.c
lab6/: laba 6.c
lab7/: laba 7.c
lab8/: laba 8.c
laba9/: laba9.md
